[package]
name = "vp8"
version = "1.2.1"
edition = "2021"
description = "A virtual computer that runs in 6502 assembly written in pure rust"
repository = "https://github.com/RysteQ/VP8"
keywords = ["6502", "emulator", "virtual", "8bit", "assembly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.6.0"
rand = "0.8.5"
piston_window = "0.124.0"

[profile.dev]
opt-level = 1
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 16