[package]
name = "vp8"
version = "1.4.7"
edition = "2021"
authors = ["RysteQ", "majorsopa"]
rust-version = "1.59.0"
description = "A virtual computer that runs in 6502 assembly written in pure rust"
repository = "https://github.com/RysteQ/VP8"
keywords = ["6502", "emulator", "virtual", "8bit", "assembly"]

[dependencies]
parse-display = "0.6.0"
rand = "0.8.5"
piston_window = "0.124.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
lto = false
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "unwind"
lto = true
codegen-units = 16
strip = "debuginfo"
incremental = false